--- a/Pipfile
+++ b/Pipfile
@@ -4,11 +4,12 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask = "*"
-gunicorn = "*"
-requests = "*"
+eventlet = "0.36.1"
+flask = "3.0.3"
+gunicorn = "23.0.0"
+requests = "2.32.3"
 
 [dev-packages]
 
 [requires]
-python_version = "3.8"
+python_version = "3.12"
